...
            android:layout_width="match_parent"
            android:layout_height="@dimen/beer_detail_image_height"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/unavailable_text"
            style="@style/Title.Accent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="-30"
            android:text="@string/beer_detail_unavailable"
            android:alpha="0"
...
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image"
            tools:alpha="1" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/availability_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_big"
            android:text="@string/beer_detail_set_unavailable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
