<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/beers_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/margin_default"
    android:clipToPadding="false"
    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
    app:spanCount="2">


</androidx.recyclerview.widget.RecyclerView>